testing jekyll theme try 5 for githib page docs in AWS repo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
         <nav class="js-navbar-scroll navbar navbar-expand navbar-dark flex-column flex-md-row td-navbar">
         <a class="navbar-brand" href="{{ site.baseurl }}/">
-            <span class="navbar-logo"></span>{% include logo.svg %}<span class="text-uppercase font-weight-bold">{{ site.title }}</span>
+            <span class="navbar-logo"></span>{% include singlestore_logo_vertical_color_on-white_rgb.svg %}<span class="text-uppercase font-weight-bold">{{ site.title }}</span>
 	      </a>
 
 	<div class="td-navbar-nav-scroll ml-md-auto center" id="main_navbar">
@@ -20,7 +20,7 @@
 	</div>
 
 	<div class="navbar-nav d-none d-lg-block">
-    <input type="search" class="form-control td-search-input" placeholder="&#xf002 Search this site…" aria-label="Search this site…" autocomplete="off">
+    <input hidden type="search" class="form-control td-search-input" placeholder="&#xf002 Search this site…" aria-label="Search this site…" autocomplete="off">
   </div>
 
 	<div class="navbar-nav d-none d-lg-block">
