--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,9 @@
             <nav aria-label="breadcrumb" class="d-none d-md-block d-print-none">
 	      <ol class="breadcrumb spb-1">
               {% assign crumbs = page.url | append: "/"  | replace: '//', '/' | split: '/' %}
-              {% for crumb in crumbs offset: 1 %}{% if crumb != "index" or crumb != "Scaling_dir" %}{% if forloop.last %}
+              {% for crumb in crumbs offset: 1 %}{% if crumb != "index" %}{% if forloop.last %}
                 <li class="breadcrumb-item active" aria-current="page">
-	          <a href="{{ site.url }}{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a>
+	          <a href="{{ site.url }}{{ site.baseurl }}{{ page.url }}">{{ page.title }}1</a>
                 </li>{% else %}
                 {% if page.url != "/docs/" %}<li class="breadcrumb-item">
                   <a href="{{ site.url }}{{ site.baseurl }}{% assign crumb_limit = forloop.index | plus: 1 %}{% for crumb in crumbs limit: crumb_limit %}{{ crumb | append: '/' }}{% endfor %}">{% if crumb == "docs" %}Technical Guides{% else %}{{ crumb | replace:'-',' ' | remove:'.html' | capitalize }}{% endif %}</a>
