--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
           {% include sidebar.html %}
           </div>
           <div class="d-none d-xl-block col-xl-2 td-toc d-print-none">
-              <div class="td-page-meta ml-2 pb-1 pt-2 mb-0">
+              <div class="td-page-meta ml-2 pb-1 pt-2 mb-0 box0">
                   {% include editable.html %}
               </div>
               <nav id="TableOfContents"><ul>
@@ -188,7 +188,7 @@
           </main>
         </div>
       </div>
-      {% include footer.html %}
+      <!--{% include footer.html %}-->
     </div>
     {% include scripts.html %}
   </body>
