--- a/_includes/editable.html
+++ b/_includes/editable.html
@@ -5,7 +5,7 @@
 <a href="{{ site.repo }}/issues/new" target="_blank"><i class="fas fa-tasks fa-fw"></i> Create project issue</a>
 -->
 
-<a href="{{ site.jira_help }}" target="_blank"><i class="fab fa-jira fa-fw fa-lg"></i> Cloud-ops Jira Support </a>
+<!--<a href="{{ site.jira_help }}" target="_blank"><i class="fab fa-jira fa-fw fa-lg"></i> Cloud-ops Jira Support </a>-->
 
 <!-- this will parse through the header fields and add a button to open
      an issue / ask a question on Github. The editable field should be in
