--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -187,7 +187,7 @@
                     <p>{{ child.description }}</p>
                  </div>{% endfor %}
               </div>{% endif %}
-              {% include feedback.html %}
+              <!--{% include feedback.html %}-->
            </div>
           </main>
         </div>
